se suben cambios de aplicacion de comandos 82, 83 y 88, asi como la sincronizacion de usuarios desde TISA hacia Consola para los usuario multitarifa consola

--- a/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
+++ b/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
@@ -432,6 +432,7 @@
       <DependentUpon>dbModel.edmx</DependentUpon>
       <LastGenOutput>dbModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="SCS\IMG\equis_roja.png" />
     <Resource Include="SCS\IMG\corte_caja.png" />
     <Resource Include="SCS\IMG\save_disckete.png" />
     <Resource Include="SCS\IMG\asignacion.png" />
