--- a/TestMdfEntityFramework/packages.config
+++ b/TestMdfEntityFramework/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.900.148" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="QRCoder" version="1.3.5" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="8.0.3" targetFramework="net472" />
 </packages>
