se suben cambios realizado para CobroTarifaFijaBotones

--- a/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
+++ b/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
@@ -135,9 +135,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="boletos_tarifa_fija.cs">
-      <DependentUpon>dbModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Clases\CLocation.cs" />
     <Compile Include="Clases\ConfigPort.cs" />
     <Compile Include="Clases\Perfiles.cs" />
@@ -285,6 +282,9 @@
       <DependentUpon>dbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="sy_boletos_detalle.cs">
+      <DependentUpon>dbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sy_boletos_tarifa_fija.cs">
       <DependentUpon>dbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="sy_cortes.cs">
@@ -512,6 +512,8 @@
       <DependentUpon>dbModel.edmx</DependentUpon>
       <LastGenOutput>dbModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="SCS\IMG\plus.png" />
+    <Resource Include="SCS\IMG\delete.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
