se suben cambios aplicando comando 7 y correcciones hechas por Gilberto en la version de firmware de alcancia 0.503

--- a/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
+++ b/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
@@ -136,6 +136,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Clases\CLocation.cs" />
+    <Compile Include="Clases\ComandosAlcancia.cs" />
     <Compile Include="Clases\ConfigPort.cs" />
     <Compile Include="Clases\Perfiles.cs" />
     <Compile Include="Clases\SincronizacionTISA.cs" />
