se suben cambios en cobro multitarifa y la sincronizacion de usuario de consola y algunos bugs, ademas de poner los combos de lugares y perfiles con value y text en el cobro de tarifa multitarifa

--- a/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
+++ b/TestMdfEntityFramework/MTConsolaMultitarifa.csproj
@@ -137,6 +137,7 @@
     </ApplicationDefinition>
     <Compile Include="Clases\CLocation.cs" />
     <Compile Include="Clases\ComandosAlcancia.cs" />
+    <Compile Include="Clases\Combos.cs" />
     <Compile Include="Clases\ConfigPort.cs" />
     <Compile Include="Clases\Perfiles.cs" />
     <Compile Include="Clases\Session.cs" />
